docker, setup app.properties, readme,...